update to build jigsaw-136